@@ -31,22 +31,22 @@ import static org.hamcrest.Matchers.*;
 
 @ExtendWith(SpringExtension.class)
 class UserControllerTest {
-    
+
     @Mock
     private UserService userService;
-    
+
     @InjectMocks
     private UserController userController;
-    
+
     private MockMvc mockMvc;
 
-    private ObjectMapper objectMapper = new ObjectMapper();
-    
-    private UserResponse testUser1 = new UserResponse("1", "John Doe", "john@example.com");
-    private UserResponse testUser2 = new UserResponse("2", "Jane Smith", "jane@example.com");
-    private CreateUserRequest createUserRequest = new CreateUserRequest("John Doe", "john@example.com");
-    private ChangeNameRequest changeNameRequest = new ChangeNameRequest("John Updated");
-    
+    private final ObjectMapper objectMapper = new ObjectMapper();
+
+    private final UserResponse testUser1 = new UserResponse("1", "john", "John Doe", "john@example.com", List.of("ROLE_USER"));
+    private final UserResponse testUser2 = new UserResponse("2", "jane", "Jane Smith", "jane@example.com", List.of("ROLE_USER"));
+    private final CreateUserRequest createUserRequest = new CreateUserRequest("john", "John Doe", "john@example.com", "password123");
+    private final ChangeNameRequest changeNameRequest = new ChangeNameRequest("John Updated");
+
     @BeforeEach
     void setUp() {
         mockMvc = MockMvcBuilders.standaloneSetup(userController).build();
@@ -57,7 +57,7 @@ class UserControllerTest {
         // Arrange
         List<UserResponse> users = Arrays.asList(testUser1, testUser2);
         when(userService.getAllUsers()).thenReturn(users);
-        
+
         // Act & Assert
         mockMvc.perform(get("/api/users")
                 .contentType(MediaType.APPLICATION_JSON))
@@ -69,30 +69,30 @@ class UserControllerTest {
                 .andExpect(jsonPath("$[1].id", is("2")))
                 .andExpect(jsonPath("$[1].name", is("Jane Smith")))
                 .andExpect(jsonPath("$[1].email", is("jane@example.com")));
-        
+
         verify(userService, times(1)).getAllUsers();
     }
-    
+
     @Test
     void testGetAllUsers_withNoUsers_returnsEmptyList() throws Exception {
         // Arrange
-        when(userService.getAllUsers()).thenReturn(Arrays.asList());
-        
+        when(userService.getAllUsers()).thenReturn(List.of());
+
         // Act & Assert
         mockMvc.perform(get("/api/users")
                 .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$", hasSize(0)));
-        
+
         verify(userService, times(1)).getAllUsers();
     }
-    
+
     @Test
     void testGetUserById_existingUserRequested_returnsUser() throws Exception {
         // Arrange
         String userId = "1";
         when(userService.getUserById(userId)).thenReturn(testUser1);
-        
+
         // Act & Assert
         mockMvc.perform(get("/api/users/{id}", userId)
                 .contentType(MediaType.APPLICATION_JSON))
@@ -100,29 +100,29 @@ class UserControllerTest {
                 .andExpect(jsonPath("$.id", is("1")))
                 .andExpect(jsonPath("$.name", is("John Doe")))
                 .andExpect(jsonPath("$.email", is("john@example.com")));
-        
+
         verify(userService, times(1)).getUserById(userId);
     }
-    
+
     @Test
     void testGetUserById_nonExistingUserRequested_returnsNotFound() throws Exception {
         // Arrange
         String userId = "999";
         when(userService.getUserById(userId)).thenThrow(new EntityNotFoundException("User"));
-        
+
         // Act & Assert
         mockMvc.perform(get("/api/users/{id}", userId)
                 .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isNotFound());
-        
+
         verify(userService, times(1)).getUserById(userId);
     }
-    
+
     @Test
     void testCreateUser_validRequestProvided_createsAndReturnsUser() throws Exception {
         // Arrange
         when(userService.createUser(any(CreateUserRequest.class))).thenReturn(testUser1);
-        
+
         // Act & Assert
         mockMvc.perform(post("/api/users")
                 .contentType(MediaType.APPLICATION_JSON)
@@ -131,17 +131,17 @@ class UserControllerTest {
                 .andExpect(jsonPath("$.id", is("1")))
                 .andExpect(jsonPath("$.name", is("John Doe")))
                 .andExpect(jsonPath("$.email", is("john@example.com")));
-        
+
         verify(userService, times(1)).createUser(any(CreateUserRequest.class));
     }
-    
+
     @Test
     void testUpdateUser_existingUserRequested_updatesAndReturnsUser() throws Exception {
         // Arrange
         String userId = "1";
-        UserResponse updatedUser = new UserResponse("1", "John Updated", "john@example.com");
+        UserResponse updatedUser = new UserResponse("1", "john", "John Updated", "john@example.com", List.of("ROLE_USER"));
         when(userService.changeName(eq(userId), eq("John Updated"))).thenReturn(updatedUser);
-        
+
         // Act & Assert
         mockMvc.perform(put("/api/users/{id}", userId)
                 .contentType(MediaType.APPLICATION_JSON)
@@ -150,23 +150,23 @@ class UserControllerTest {
                 .andExpect(jsonPath("$.id", is("1")))
                 .andExpect(jsonPath("$.name", is("John Updated")))
                 .andExpect(jsonPath("$.email", is("john@example.com")));
-        
+
         verify(userService, times(1)).changeName(userId, "John Updated");
     }
-    
+
     @Test
     void testUpdateUser_nonExistingUserRequested_returnsNotFound() throws Exception {
         // Arrange
         String userId = "999";
         when(userService.changeName(eq(userId), anyString()))
                 .thenThrow(new EntityNotFoundException("User"));
-        
+
         // Act & Assert
         mockMvc.perform(put("/api/users/{id}", userId)
                 .contentType(MediaType.APPLICATION_JSON)
                 .content(objectMapper.writeValueAsString(changeNameRequest)))
                 .andExpect(status().isNotFound());
-        
+
         verify(userService, times(1)).changeName(eq(userId), anyString());
     }
 }
